--- a/mod3-sol/css/styles.css
+++ b/mod3-sol/css/styles.css
@@ -20,9 +20,15 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   line-height: .75;
+  float: left;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header {
+  float: left;
+  width: 50%
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
@@ -30,7 +36,9 @@ body {
 }
 .navbar-header button.navbar-toggle {
   clear: both;
-  margin-top: -30px;
+  /*margin-top: -30px;*/
+  float: left;
+  width: 50%
 }
 
 
@@ -56,18 +64,8 @@ body {
 }
 
 
-
-
-
-
-/********** Small devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-
-}
-
-/********** Extra small devices only **********/
-@media (max-width: 767px) {
-  /* Header */
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
+@media (min-width: 768px) {
+  #nav-list {
+    display: none;
   }
+}
